--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -119,7 +119,6 @@ html.dark .prose {
   overflow: hidden;
 
   width: 15.625rem;
-  max-height: 74vh;
 
   font-size: 0.875em;
 }
@@ -161,12 +160,17 @@ html.dark .prose {
 
 .toc-desktop > ul {
   overflow-y: auto;
+  scrollbar-width: none;
 
   height: 100%;
   margin-top: 0.25rem;
 
   opacity: 0.7;
   transition: all 700ms;
+}
+
+.toc-desktop > ul::-webkit-scrollbar {
+  display: none;
 }
 
 .toc-desktop-on > ul,
